20240829 add wzdyj driver , rx ok

--- a/SoftWare/STM32MCU/Dev/MDK-ARM/SoftWare.uvprojx
+++ b/SoftWare/STM32MCU/Dev/MDK-ARM/SoftWare.uvprojx
@@ -801,6 +801,11 @@
               <FileType>1</FileType>
               <FilePath>..\WeightMode_app\Src\app_smmz.c</FilePath>
             </File>
+            <File>
+              <FileName>app_wzdyj.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\WeightMode_app\Src\app_wzdyj.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
