20240911 update stm32 of USB_HOST AT24C UTC

--- a/SoftWare/SDWe/DGUS_V7646/Config/Terminal.ini
+++ b/SoftWare/SDWe/DGUS_V7646/Config/Terminal.ini
@@ -47,10 +47,10 @@ currsize=21
 currpixel=1
 Rkey=True
 [TFTPRJ]
-Prj1=D:\WorkSpace\GitWorkSpace\ESSH_2024\ESSH_2024\SoftWare\SDWe\Debug\DWprj.hmi
-Prj2=D:\WorkSpace\GitWorkSpace\ESSH_2024\ESSH_2024\SoftWare\SDWe\Dev\DWprj.hmi
-Prj3=D:\WorkSpace\GitWorkSpace\WeightMode_V5_U8\WeightMode_V5\SoftWare\DiWenScreen\Debug15.6_20231115\DWprj.hmi
-Prj4=D:\WorkSpace\GitWorkSpace\WeightMode_V5_U8\WeightMode_V5\SoftWare\DiWenScreen\Debug\project20230829\DWprj.hmi
+Prj1=D:\WorkSpace\GitWorkSpace\ESSH_2024\ESSH_2024\SoftWare\SDWe\新建文件夹 (38)\DWprj.hmi
+Prj2=D:\WorkSpace\GitWorkSpace\ESSH_2024\ESSH_2024\SoftWare\SDWe\Debug\DWprj.hmi
+Prj3=D:\WorkSpace\GitWorkSpace\ESSH_2024\ESSH_2024\SoftWare\SDWe\Dev\DWprj.hmi
+Prj4=D:\WorkSpace\GitWorkSpace\WeightMode_V5_U8\WeightMode_V5\SoftWare\DiWenScreen\Debug15.6_20231115\DWprj.hmi
 [DGUSOption]
 DATAAUTO=0
 COLOR=63488
