debug 20240916 : can triger store , Program Size: Code=58868 RO-data=1212 RW-data=20172 ZI-data=28204

--- a/SoftWare/STM32MCU/Dev/MDK-ARM/SoftWare.uvprojx
+++ b/SoftWare/STM32MCU/Dev/MDK-ARM/SoftWare.uvprojx
@@ -811,6 +811,11 @@
               <FileType>1</FileType>
               <FilePath>..\WeightMode_app\Src\app_DataCenter.c</FilePath>
             </File>
+            <File>
+              <FileName>app_UTCTimer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\WeightMode_app\Src\app_UTCTimer.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
